--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.containerForm{
+  width: 75%;
+  height: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 50px auto;
+  background-color: black;
+  color: whitesmoke;
+  border-radius: 1em;
+  padding: 30px;
+  
+}
+
+#resetBtn{
+  width: 25%;
+  background-color: orangered;
+  border: none;
+  margin: 20px auto;
+  height: 2em;
+  border-radius: 1em;
+  cursor: pointer;
+}
+
+#resetBtn:hover{
+  background-color: whitesmoke;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+}
+
+.inputWithLabel{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 30px auto;
+}
+
+input{
+  height: 2em;
+  border-radius: 1em;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding-left: 1em;
+}
+#send{
+  width: 50%;
+  background-color: green;
+  border: none;
+  margin: 20px auto;
+  height: 2em;
+  border-radius: 1em;
+  cursor: pointer;
+}
+
+#send:hover{
+  background-color: greenyellow;
+
+}
+
+.resultcontainer{
+  width: 75%;
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  margin: 50px auto;
+  background-color: orangered;
+  color: black;
+  border-radius: 1em;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  padding: 30px;
+  font-size: 1.4em;
+
+
+
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
